fix home container alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1058,6 +1058,11 @@ img {
 
 /* For medium devices */
 @media screen and (min-width: 568px) {
+  .home__container {
+    display: flex;
+    align-items:center;
+  }
+
   .home__content {
     grid-template-columns: max-content 1fr 1fr;
   }
